antex-rs/tui/src/snapshots/antex_tui__keymap_setup__tests__keymap_debug_view_delayed_hint.snap
---
source: tui/src/keymap_setup.rs
assertion_line: 1460
expression: rendered
---
Keypress Inspector
Press any key to see what Antex receives. Esc is inspected; Ctrl+C closes.
Still waiting? If nothing changes when you press a key, your terminal is not sending that key to
Antex. Only received keys can be assigned as shortcuts.

Waiting for a keypress...
