antex-rs/tui/src/snapshots/antex_tui__keymap_setup__tests__keymap_debug_view_initial.snap
---
source: tui/src/keymap_setup.rs
assertion_line: 1447
expression: "render_debug(&view, 80)"
---
Keypress Inspector
Press any key to see what Antex receives. Esc is inspected; Ctrl+C closes.
Tip: Antex can only inspect keys your terminal sends.

Waiting for a keypress...
