antex-rs/tui/src/snapshots/antex_tui__keymap_setup__tests__keymap_debug_view_match.snap
---
source: tui/src/keymap_setup.rs
assertion_line: 1472
expression: rendered
---
Keypress Inspector
Press any key to see what Antex receives. Esc is inspected; Ctrl+C closes.
Tip: Antex can only inspect keys your terminal sends.

Detected: ctrl + o
Config key: ctrl-o
Raw event: code=Char('o'), modifiers=ctrl, kind=Press

Assigned actions:
  - global.copy (Copy) - Copy the last agent response to the clipboard. [Default]
  - agents.resume (Resume) - Open the session resume picker. [Default]
